# shop_api

./: .env  .env_example  .gitignore  pyproject.toml  requirements.txt
Config/: settings.py  urls.py
account/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_options.py
config/: settings.py  urls.py
order/: models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_payment_alter_order_status.py  0004_alter_order_options_alter_orderitem_options.py  0005_alter_order_payment.py  0006_alter_order_status.py  0007_alter_order_payment_alter_order_status.py  0008_alter_order_payment.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_product_options_alter_productimage_options_and_more.py
